# typecasts

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
docs/_templates/: badges.html  github.html  moreinfo.html
tests/test_example/: test_some_function.py
tests/test_typecasts/: test_dataclasses.py  test_errors.py  test_identity.py  test_multiple_inheritance.py  test_operations.py  test_pydantic.py  test_register.py  test_single_inheritance.py  test_subclass_of.py  test_typed_dict.py
typecasts/: __init__.py  defaults.py  errors.py  identity.py  main.py  types.py
typecasts/defaults/: __init__.py  base.py  dataclass.py  pydantic.py
