[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "typecasts"
version = "0.1.6"
description = "Implicit type conversions for Python"
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/python-platonic/typecasts"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
documented = "^0.1.1"
"backports.cached-property" = { version = "^1.0.0", python = "<3.8" }
dataclasses = { version = "0.7", python = ">=3.6, <3.7" }
generic-args = "^0.0.1"

[tool.poetry.dev-dependencies]
mypy = "0.790"

wemake-python-styleguide = "^0.14"
flake8-pytest-style = "^1.3"

safety = "^1.9"

pytest = "^5.4"
pytest-cov = "^2.10"
pytest-randomly = "^3.4"

sphinx = "^2.2"
sphinx-autodoc-typehints = "^1.10"
doc8 = "^0.8"
m2r = "^0.2"
tomlkit = "^0.7"
"backports.cached_property" = "^1.0.0"
pydantic = "^1.7.1"
flakehell = "^0.9.0"
